updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a software developer.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I am from Stockton, Ca.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I like to watch sports and try new restaurants.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>My dream job is to develop apps.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I live in Sacramento, CA.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to pursue coding as a full time job.</p>
     </section>
 
     <footer id="footer">
